<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crowd_bayes_cusum</name>
  <version>0.0.0</version>
  <description>The crowd_bayes_cusum package</description>
  <maintainer email="ericguan04@gmail.com">ericguan04</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies required at build-time -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>semaforr</build_depend>
  <build_depend>ament_cmake_python</build_depend>

  <!-- Dependencies required at run-time -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>semaforr</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <export>
  </export>
</package>